--- a/Day15 Multiprocessing/multiProcessing.ipynb
+++ b/Day15 Multiprocessing/multiProcessing.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -86,6 +86,71 @@
         "\n",
         "  print(\"Time taken:\", time.time()-t)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Multi Processing with help of process pool executor"
+      ],
+      "metadata": {
+        "id": "WZRmAhSsNGeY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from concurrent.futures import ProcessPoolExecutor\n",
+        "import time\n",
+        "\n",
+        "def squareNum(number):\n",
+        "  time.sleep(1)\n",
+        "  return f\"Square of {number} is {number**2}\"\n",
+        "\n",
+        "numbers = [1,2,3,4,5,6,8,9,101,11]\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "\n",
+        "  with ProcessPoolExecutor(max_workers = 3) as executor:\n",
+        "    results = executor.map(squareNum, numbers)\n",
+        "\n",
+        "  for result in results:\n",
+        "    print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wi2RAqKpNCLo",
+        "outputId": "692f0aac-cd63-42d4-869f-c53622d192e7"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Square of 1 is 1\n",
+            "Square of 2 is 4\n",
+            "Square of 3 is 9\n",
+            "Square of 4 is 16\n",
+            "Square of 5 is 25\n",
+            "Square of 6 is 36\n",
+            "Square of 8 is 64\n",
+            "Square of 9 is 81\n",
+            "Square of 101 is 10201\n",
+            "Square of 11 is 121\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ProcessPoolExecutor provides true parallelism by running processes on multiple CPU cores, bypassing the GIL and making full use of the available processing power."
+      ],
+      "metadata": {
+        "id": "_INY-qcJQ_g_"
+      }
     }
   ]
 }
